# multi-source-conversational-rag

./: .env.example  .gitattributes  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
app/: app.py  page_config.py
app/components/: chat.py  sidebar.py  source_viewer.py
assets/: CLAUDE-example.md
config/: settings.py
rag/: models.py  pipeline.py
rag/chunking/: chunker.py
rag/embeddings/: embedder.py
rag/generation/: generator.py
rag/ingestion/: arxiv_ingestor.py  base.py  pdf_ingestor.py  text_ingestor.py  web_ingestor.py  youtube_ingestor.py
rag/memory/: conversation.py
rag/retrieval/: bm25_index.py  retriever.py
rag/vectorstore/: chroma_store.py
scripts/: reset_vectorstore.py
tests/: conftest.py  test_bm25.py  test_chunking.py  test_ingestion.py  test_memory.py  test_pipeline.py  test_retrieval.py  test_web_youtube_ingestion.py
